[package]
name = "google-dns-rs"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Stuart <e@s.tuart.me>"]
license = "MIT"
keywords = ["doh", "dns-over-https", "google-dns", "dns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "*", features = ["json", "charset", "tls"] }