[package]
name = "google-dns-rs"
description = "google-dns-rs is a third party Google DNS client for rust"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["Eduardo Stuart <e@s.tuart.me>"]
license = "MIT"
keywords = ["doh", "dns-over-https", "google-dns", "dns"]
repository = "https://github.com/eduardostuart/google-dns-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.1.1", features = ["json", "charset", "tls"] }